--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,23 +29,39 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildscript {
+        dependencies {
+            classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        }
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "androidx.recyclerview:recyclerview-selection:1.2.0-alpha01"
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.cardview:cardview:1.0.0"
 
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'com.android.support:design:31.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
