--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,21 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdk 31
+    compileSdkVersion 31
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.moneymani"
-        minSdk 21
-        targetSdk 31
+        applicationId "com.ondarm.android.newsreaders"
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -23,46 +24,121 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    buildscript {
-        dependencies {
-            classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
-        }
+
+    buildFeatures {
+        dataBinding true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    // Coroutine Library 추가 시 발생하는 META-INF 관련 문제를 해결하기 위해 삽입
+    configurations.all {
+        resolutionStrategy {
+            exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
+        }
+    }
+
 }
 
-dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+dependencies {
+//    def lifecycle_version = "2.2.0"
+//    def room_version = '2.2.5'
+//    def retrofit_version = '2.9.0'
+//    def glide_version = '4.11.0'
+//    def work_version = "2.4.0"
+//    def nav_version = "2.3.0"
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.json:json:20180813'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // swipeRefreshView
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    // RecyclerView & CardView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'androidx.activity:activity-ktx:1.4.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+    // okHttp
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-    implementation 'com.tbuonomo:dotsindicator:4.2'
-
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-
+    // circleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // jSoup
+    implementation 'org.jsoup:jsoup:1.13.1'
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // retrofit2 /app/build.gradle dependencies
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // LiveData & ViewModel
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Activity
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+
+    // Coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7") // META-INF 에러 원인, 1.3.0 에서 문제 발생 없으나 1.3.7 에서 문제 발생함
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // WorkManager
+
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Koin
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation "org.koin:koin-androidx-ext:$koin_version"
+
+
+
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "com.google.android.material:material:1.6.1"
+
+    def work_version = "2.6.0"
+    // Force WorkManager 2.6.0 for transitive dependency
+    implementation("androidx.work:work-runtime-ktx:$work_version") {
+        force = true
+    }
 
 
 }
