--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
+    // Version
+    ext {
+        kotlin_version = '1.4.10'
+        lifecycle_version = "2.2.0"
+        room_version = '2.2.5'
+        retrofit_version = '2.9.0'
+        glide_version = '4.11.0'
+        nav_version = "2.3.0"
+        koin_version = '2.1.5'
+    }
     repositories {
         google()
-        mavenCentral()
+        jcenter()
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+
+
+}
+
+allprojects {
+    repositories {
+
     }
 }
 
